35. Configure Properties for Postgres Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-#spring.h2.console.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+#To enable/disable dummy data.sql load (run by default for embedded DB like h2)
+#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
+#disable hibernate to generate DB schema
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=none
+
+#to prevent some sql exceptions
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jpa.show-sql=true
-#not for production
 spring.thymeleaf.cache=false
-version=0.1.0
+version=3.0.0
