--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+
+		<finalName>pma-app</finalName>
 	</build>
 
 </project>
