45. Working with Spring Profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,1 @@
-spring.datasource.url=${jdbcurl}
-spring.datasource.username=${dbuser}
-spring.datasource.password=${dbpass}
-
-#To enable/disable dummy data.sql load (run by default for embedded DB like h2)
-#spring.datasource.initialization-mode=always
-spring.datasource.initialization-mode=never
-#disable hibernate to generate DB schema
-#spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=none
-
-#to prevent some sql exceptions
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.jpa.show-sql=true
-spring.thymeleaf.cache=false
-version=${version}
+spring.profiles.active=dev
