--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,1 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-#spring.h2.console.url=jdbc:h2:mem:testdb
-spring.jpa.show-sql=true
-#not for production
-spring.thymeleaf.cache=false
-version=3.3.3
-jdbc.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+spring.profiles.active=test
