--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,10 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 version=dev
+
+#TRACE, DEBUG, INFO, WARN, ERROR
+logging.level.root=WARN
+logging.level.com.jrp.pma=DEBUG
+logging.level.org.springframework=INFO
+logging.file=app.log
+#logging.pattern.dateformat=yy-mm-dd
