--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,29 +1,20 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#
-##To enable/disable dummy data.sql load (run by default for embedded DB like h2)
-##spring.datasource.initialization-mode=always
-#spring.datasource.initialization-mode=never
-##disable hibernate to generate DB schema
-#spring.jpa.hibernate.ddl-auto=none
-##spring.jpa.hibernate.ddl-auto=validate
-#
-##to prevent some sql exceptions
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#
-#spring.jpa.show-sql=true
-#spring.thymeleaf.cache=false
-version=dev
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-#spring.profiles.active=test
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-#spring.h2.console.url=jdbc:h2:mem:testdb
+#To enable/disable dummy data.sql load (run by default for embedded DB like h2)
+#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
+#disable hibernate to generate DB schema
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=none
+
+#to prevent some sql exceptions
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jpa.show-sql=true
-#not for production
 spring.thymeleaf.cache=false
-jdbc.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+version=dev
 
 #TRACE, DEBUG, INFO, WARN, ERROR
 logging.level.root=WARN
