54. Spring Security: Customize White Label Error Pages.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,3 +22,6 @@ logging.level.com.jrp.pma=DEBUG
 logging.level.org.springframework=INFO
 logging.file=app.log
 #logging.pattern.dateformat=yy-mm-dd
+
+#Disable Spring Error page handling - for custom Error page handling - by default Error page handling is takeover by tomcat web container
+server.error.whitelabel.enabled=false
