--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,3 +25,7 @@ logging.file=app.log
 
 #Disable Spring Error page handling - for custom Error page handling - by default Error page handling is takeover by tomcat web container
 server.error.whitelabel.enabled=false
+
+# we need the below property to turn off hibernate auto validation
+# we are using constraints validation and customizing our data validation rules
+spring.jpa.properties.javax.persistence.validation.mode=none
